--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/brian7704/OpenTAKServer"
 documentation = "https://docs.opentakserver.io"
 
 [tool.poetry.dependencies]
+python = ">=3.10,<3.14"
 adsbxcot = "6.0.4"
 androguard = "4.1.2"
 aiscot = "5.2.1"
@@ -25,11 +26,11 @@ flask-socketio = "5.4.1"
 flask-sqlalchemy = "3.1.1"
 eventlet = "0.37.0"
 gevent = "24.11.1"
-lastversion = "*"
+lastversion = "^3.5.1"
 lxml = "5.3.0"
 meshtastic = "2.5.4"
 pika = "1.3.2"
-poetry-dynamic-versioning = {version = "1.4.1", extras = ["plugin"]}
+poetry-dynamic-versioning = "1.4.1"
 protobuf = "5.28.3"
 psutil = "6.1.0"
 pyfiglet = "1.0.2"
@@ -38,8 +39,7 @@ PyJWT = "2.9.0"
 pytak = "6.3.2"
 pytest = "8.3.3"
 pytest-cov = "6.0.0"
-python = ">=3.10"
-python-socketio = {extras = ["client", "websocket_client", "asyncio_client"], version = "5.11.4"}
+python-socketio = {version="5.11.4", extras=["client", "websocket_client", "asyncio_client"]}
 pyOpenSSL = "24.2.1"
 pyotp = "2.9.0"
 PyYAML = "6.0.2"
@@ -47,6 +47,11 @@ sqlalchemy = "2.0.36"
 sqlalchemy-utils = "0.41.2"
 tldextract = "5.1.2"
 unishox2-py3 = "1.0.0"
+# Fixed dependency versions to resolve conflicts
+cachecontrol = "0.13.1"
+attrs = "23.1.0"
+packaging = "24.0"  # Updated to meet meshtastic requirement
+virtualenv = "20.25.0"
 
 [tool.poetry-dynamic-versioning]
 enable = true
@@ -55,17 +60,10 @@ style = "semver"
 dirty = false
 pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
 
-[tool.poetry-dynamic-versioning.files."opentakserver/__init__.py"]
-persistent-substitution = true
-initial-content = """
-  # These version placeholders will be replaced later during substitution.
-  __version__ = "0.0.0"
-  __version_tuple__ = (0, 0, 0)
-"""
-
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.scripts]
-opentakserver = "opentakserver.app:main"
+opentakserver = "opentakserver.app:create_app"
+
